changed textarea size and coloring. There is one issue with link to be the size of the container but it is invisible

--- a/FrontEnd/src/CSS/AddStudentScreen.css
+++ b/FrontEnd/src/CSS/AddStudentScreen.css
@@ -7,8 +7,12 @@ textarea {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-  resize: vertical;
   box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.2);
+}
+
+textarea {
+  resize: none;
+  height: 100px;
 }
 
 /* Style the label to display next to the inputs */
